# harmony-open-music

./: .gitignore  LICENSE  README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/media/: app_icon_layered.json
AppScope/resources/en_US/element/: string.json
AppScope/resources/zh_CN/element/: string.json
doctor/: custom-source-design.md
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/ets/constants/: AppConstants.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/models/: AppModels.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/services/: AppStatePersistenceService.ets  BaiduPanService.ets  CustomPlaylistService.ets  CustomSourceCatalogService.ets  MusicSourceApiService.ets  PlaybackPlatformService.ets  QuickJsSourceService.ets  SourceLyricsService.ets  TrackArtworkService.ets
entry/src/main/ets/utils/: I18nUtil.ets  ImportStateUtils.ets  LibraryStateUtils.ets  LxUserApiPreload.ets  LyricsParser.ets  MusicSourceUtils.ets  PlaybackCollectionUtils.ets  QuickJsEngine.ets  ThemeUtils.ets  TrackCoverDisplayUtils.ets  (+1 more)
entry/src/test/: BackgroundPlayback.test.ets  BaiduPanService.test.ets  ImportStateUtils.test.ets  LibraryQueueState.test.ets  List.test.ets  LyricsParser.test.ets  PlaybackCollectionState.test.ets  QuickJsNativeEngine.test.ets  QuickJsSourceService.test.ets  TrackCoverDisplayUtils.test.ets  test-custom-source.mjs
entry/src/test/fixtures/: minimal-custom-source.js
tools/: generate_app_icon.py
(+30 files in other folders)
